fixed layout issues

--- a/src/containers/Layout.css
+++ b/src/containers/Layout.css
@@ -9,3 +9,20 @@ input::placeholder {
     color: black
 }
 
+@media only screen and (max-height: 950px) {
+    .Body {
+        font-size: 0.6em;
+    }
+}
+
+@media only screen and (max-height: 800px) {
+    .Body {
+        font-size: 0.5em;
+    }
+}
+
+@media only screen and (max-height: 700px) {
+    .Body {
+        font-size: 0.45em;
+    }
+}
